--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -12,45 +12,58 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    font-size: 18px;
+    font-size: calc(var(--card-height) * .1);
 }
 
 .card-content {
-    padding: 10px;
+    padding: calc(var(--card-height) * .01) calc(var(--card-height) * .04);
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-header {
-    height: 15px;   
-    width: 15px;
+    height: calc(var(--card-height) * .20);   
+    width: calc(var(--card-height) * .10);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-items: center;
     align-items: center;
 }
 
 .card-body {
     flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: calc(var(--card-height) * .20);
 }
 
 .card-footer {
-    height: 20px;
+    height: calc(var(--card-height) * .10); 
+}
+
+.card-body img {
+    width: calc(var(--card-width) * .2);
+    height: calc(var(--card-width) * .2);
 }
 
 .red {
     color: red;
 }
 
-img {
-    width: 15px;
-    height: 15px;
+.card-header img  {
+    width: calc(var(--card-height) * .08);
+    height: calc(var(--card-height) * .08);
 }
 
 .back {
     background-image: url('/assets/back.svg');
+    background-size: 20%;
     height: 100%;
     border-radius: var(--card-radius);
-    margin: 6px;
+    margin: calc(var(--card-height) * .05);
     border: 1px solid var(--card-border-color);
 }
 
